# Flafka-API-SpotiPY

./: .gitignore  README.md  pyproject.toml
flafka_api_spotipy/: connection_api.py
tests/: __init__.py  configtest.py  connection_tests.py  test_connection.py
